package $1_where.$2_system_logic.$3_on_mapper.mapper

case class Arrears(value: Int)

