package $1_where.$2_system_logic.$3_on_mapper.mapper

import java.time.LocalDate

case class ConfirmDate(value: LocalDate)

